--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <!-- Speakers & Founders -->
     <section id="speakers" class="py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-4xl font-bold mb-12 text-center">Visionaries & <span class="text-brand-purple">Founders</span></h2>
+            <h2 class="text-4xl font-bold mb-12 text-center"><span class="text-brand-purple">Founders</span></h2>
             
             <!-- Founders Spotlight -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-16">
@@ -490,23 +490,23 @@
                     <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&q=80" class="w-32 h-32 rounded-full object-cover border-2 border-brand-cyan shadow-[0_0_15px_rgba(6,182,212,0.5)]" alt="Founder">
                     <div>
                         <span class="text-brand-cyan text-sm font-bold uppercase tracking-wider">Co-Founder</span>
-                        <h3 class="text-2xl font-bold">Dr. Alex Chen</h3>
-                        <p class="text-gray-400 text-sm mt-2">Former Lead at DeepMind. Pioneer in Reinforcement Learning.</p>
+                        <h3 class="text-2xl font-bold">Dr. Pranjall Jain</h3>
+                        <p class="text-gray-400 text-sm mt-2">Phd, Author, Entrepreneur</p>
                         <div class="flex gap-4 mt-4">
-                            <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-linkedin text-xl"></i></a>
+                            <a href="https://www.linkedin.com/in/pranjaljainca/" target="_blank" class="text-gray-400 hover:text-white"><i class="fa-brands fa-linkedin text-xl"></i></a>
                             <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-twitter text-xl"></i></a>
                         </div>
                     </div>
                 </div>
                  <!-- Founder 2 -->
                  <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row items-center gap-6 border-l-4 border-brand-purple">
-                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400&q=80" class="w-32 h-32 rounded-full object-cover border-2 border-brand-purple shadow-[0_0_15px_rgba(168,85,247,0.5)]" alt="Founder">
+                    <img src="pj.jpeg" class="w-32 h-32 rounded-full object-cover border-2 border-brand-purple shadow-[0_0_15px_rgba(168,85,247,0.5)]" alt="Founder">
                     <div>
                         <span class="text-brand-purple text-sm font-bold uppercase tracking-wider">Co-Founder</span>
-                        <h3 class="text-2xl font-bold">Sarah Vance</h3>
-                        <p class="text-gray-400 text-sm mt-2">Author of "The Ethical Code". AI Policy Advisor.</p>
+                        <h3 class="text-2xl font-bold">Pooja Jain</h3>
+                        <p class="text-gray-400 text-sm mt-2">Gemini at Google</p>
                         <div class="flex gap-4 mt-4">
-                            <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-linkedin text-xl"></i></a>
+                            <a href="https://www.linkedin.com/in/poojajain2/" target="_blank" class="text-gray-400 hover:text-white"><i class="fa-brands fa-linkedin text-xl"></i></a>
                             <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-twitter text-xl"></i></a>
                         </div>
                     </div>
