--- a/index.html
+++ b/index.html
@@ -478,6 +478,98 @@
         </div>
     </section>
 
+    <!-- Upcoming Events List Section (NEW) -->
+    <section id="upcoming-events" class="py-20 border-t border-white/5">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Section Header -->
+            <div class="mb-12">
+                <div class="flex items-center gap-3 mb-4">
+                    <div class="p-3 bg-white/5 rounded-lg">
+                        <i class="fa-regular fa-calendar text-2xl text-brand-purple"></i>
+                    </div>
+                    <h2 class="text-4xl font-bold">Conferences <span class="text-white">& Events</span></h2>
+                </div>
+                <p class="text-gray-400 max-w-2xl text-lg">
+                    Connect in person at world-class AI events. From intimate workshops to major global summits.
+                </p>
+            </div>
+
+            <!-- Subsection Title -->
+            <div class="flex items-center gap-2 mb-8">
+                <span class="w-2 h-2 rounded-full bg-brand-green animate-pulse"></span>
+                <h3 class="text-xl font-bold text-white">Upcoming Events</h3>
+            </div>
+
+            <!-- Events List -->
+            <div class="space-y-6">
+                
+                <!-- Event Card 1 -->
+                <div class="glass-card p-6 rounded-xl border border-white/10 hover:border-brand-cyan/50 transition-all duration-300 group">
+                    <div class="flex flex-col md:flex-row md:items-center justify-between gap-6">
+                        <div class="space-y-2">
+                            <h3 class="text-2xl font-bold text-white group-hover:text-brand-cyan transition-colors">WorldAIForum Annual 2025</h3>
+                            <div class="flex flex-wrap gap-4 text-sm text-gray-400">
+                                <span class="flex items-center gap-2"><i class="fa-solid fa-location-dot text-brand-cyan"></i> Dubai, UAE</span>
+                                <span class="flex items-center gap-2"><i class="fa-regular fa-clock text-brand-cyan"></i> Mar 15-18, 2025</span>
+                            </div>
+                        </div>
+                        <div class="flex items-center gap-4">
+                            <span class="bg-brand-green/20 text-brand-green px-4 py-1.5 rounded-full text-xs font-bold uppercase tracking-wide border border-brand-green/30">Registration Open</span>
+                        </div>
+                    </div>
+                    <div class="mt-6 pt-6 border-t border-white/5 flex justify-start">
+                        <button class="px-6 py-2 border border-white/20 rounded-lg text-sm font-bold hover:bg-white hover:text-black transition-all">
+                            Learn More
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Event Card 2 -->
+                <div class="glass-card p-6 rounded-xl border border-white/10 hover:border-brand-purple/50 transition-all duration-300 group">
+                    <div class="flex flex-col md:flex-row md:items-center justify-between gap-6">
+                        <div class="space-y-2">
+                            <h3 class="text-2xl font-bold text-white group-hover:text-brand-purple transition-colors">AI Ethics Summit</h3>
+                            <div class="flex flex-wrap gap-4 text-sm text-gray-400">
+                                <span class="flex items-center gap-2"><i class="fa-solid fa-location-dot text-brand-purple"></i> London, UK</span>
+                                <span class="flex items-center gap-2"><i class="fa-regular fa-clock text-brand-purple"></i> Apr 8-10, 2025</span>
+                            </div>
+                        </div>
+                        <div class="flex items-center gap-4">
+                            <span class="bg-yellow-500/20 text-yellow-400 px-4 py-1.5 rounded-full text-xs font-bold uppercase tracking-wide border border-yellow-500/30">Early Bird</span>
+                        </div>
+                    </div>
+                    <div class="mt-6 pt-6 border-t border-white/5 flex justify-start">
+                        <button class="px-6 py-2 border border-white/20 rounded-lg text-sm font-bold hover:bg-white hover:text-black transition-all">
+                            Learn More
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Event Card 3 -->
+                <div class="glass-card p-6 rounded-xl border border-white/10 hover:border-gray-500/50 transition-all duration-300 group">
+                    <div class="flex flex-col md:flex-row md:items-center justify-between gap-6">
+                        <div class="space-y-2">
+                            <h3 class="text-2xl font-bold text-white group-hover:text-gray-300 transition-colors">Machine Learning Expo</h3>
+                            <div class="flex flex-wrap gap-4 text-sm text-gray-400">
+                                <span class="flex items-center gap-2"><i class="fa-solid fa-location-dot text-gray-500"></i> Tokyo, Japan</span>
+                                <span class="flex items-center gap-2"><i class="fa-regular fa-clock text-gray-500"></i> May 22-25, 2025</span>
+                            </div>
+                        </div>
+                        <div class="flex items-center gap-4">
+                            <span class="bg-gray-700/50 text-gray-400 px-4 py-1.5 rounded-full text-xs font-bold uppercase tracking-wide border border-gray-600/30">Coming Soon</span>
+                        </div>
+                    </div>
+                    <div class="mt-6 pt-6 border-t border-white/5 flex justify-start">
+                        <button class="px-6 py-2 border border-white/20 rounded-lg text-sm font-bold hover:bg-white hover:text-black transition-all">
+                            Learn More
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- Speakers & Founders -->
     <section id="speakers" class="py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
