--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
         </div>
     </section>
 
-    <!-- YouTube & Video Section -->
-    <section id="videos" class="py-20 relative">
+    <!-- YouTube & Video Section (RELOCATED HERE) -->
+    <section id="videos" class="py-20 relative border-b border-white/5 bg-black/20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-end mb-12">
                 <div>
@@ -252,66 +252,67 @@
                         <span class="block font-bold text-white">2.5M</span>
                         <span class="text-xs text-gray-400">Views</span>
                     </div>
-                    <button class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded text-sm font-bold transition-colors">
+                    <a href="https://www.youtube.com/@WorldAIForum" target="_blank" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded text-sm font-bold transition-colors">
                         SUBSCRIBE
-                    </button>
+                    </a>
                 </div>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Video Card 1 -->
-                <div class="glass-card rounded-xl overflow-hidden group cursor-pointer">
+                <a href="https://www.youtube.com/watch?v=aircAruvnKk" target="_blank" class="glass-card rounded-xl overflow-hidden group cursor-pointer block">
                     <div class="relative h-48 bg-gray-800">
-                        <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?w=800&q=80" class="w-full h-full object-cover transition transform group-hover:scale-110" alt="AI Video">
+                        <!-- Using Unsplash for thumbnail simulation -->
+                        <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?w=800&q=80" class="w-full h-full object-cover transition transform group-hover:scale-110" alt="Neural Networks">
                         <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <i class="fa-solid fa-play-circle text-6xl text-brand-cyan drop-shadow-lg"></i>
                         </div>
-                        <span class="absolute bottom-2 right-2 bg-black/80 text-xs px-2 py-1 rounded">12:45</span>
+                        <span class="absolute bottom-2 right-2 bg-black/80 text-xs px-2 py-1 rounded">19:13</span>
                     </div>
                     <div class="p-5">
-                        <h3 class="text-lg font-bold mb-2 group-hover:text-brand-cyan transition-colors">The Ethics of AGI: A Debate</h3>
+                        <h3 class="text-lg font-bold mb-2 group-hover:text-brand-cyan transition-colors">But what is a Neural Network?</h3>
                         <div class="flex justify-between text-sm text-gray-400">
-                            <span><i class="fa-regular fa-eye mr-1"></i> 45K Views</span>
-                            <span>2 days ago</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i> 12M Views</span>
+                            <span>3Blue1Brown</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
                  <!-- Video Card 2 -->
-                 <div class="glass-card rounded-xl overflow-hidden group cursor-pointer">
+                 <a href="https://www.youtube.com/watch?v=jGwO_UgTS7I" target="_blank" class="glass-card rounded-xl overflow-hidden group cursor-pointer block">
                     <div class="relative h-48 bg-gray-800">
-                        <img src="https://images.unsplash.com/photo-1555255707-c07966088b7b?w=800&q=80" class="w-full h-full object-cover transition transform group-hover:scale-110" alt="Coding Video">
+                        <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?w=800&q=80" class="w-full h-full object-cover transition transform group-hover:scale-110" alt="ChatGPT">
                         <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <i class="fa-solid fa-play-circle text-6xl text-brand-cyan drop-shadow-lg"></i>
                         </div>
-                        <span class="absolute bottom-2 right-2 bg-black/80 text-xs px-2 py-1 rounded">28:10</span>
+                        <span class="absolute bottom-2 right-2 bg-black/80 text-xs px-2 py-1 rounded">14:20</span>
                     </div>
                     <div class="p-5">
-                        <h3 class="text-lg font-bold mb-2 group-hover:text-brand-cyan transition-colors">Building Neural Networks from Scratch</h3>
+                        <h3 class="text-lg font-bold mb-2 group-hover:text-brand-cyan transition-colors">How ChatGPT Works Technically</h3>
                         <div class="flex justify-between text-sm text-gray-400">
-                            <span><i class="fa-regular fa-eye mr-1"></i> 112K Views</span>
-                            <span>1 week ago</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i> 2.1M Views</span>
+                            <span>Computerphile</span>
                         </div>
                     </div>
-                </div>
+                </a>
 
                  <!-- Video Card 3 -->
-                 <div class="glass-card rounded-xl overflow-hidden group cursor-pointer">
+                 <a href="https://www.youtube.com/watch?v=2iFJ4jtQYkk" target="_blank" class="glass-card rounded-xl overflow-hidden group cursor-pointer block">
                     <div class="relative h-48 bg-gray-800">
-                        <img src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?w=800&q=80" class="w-full h-full object-cover transition transform group-hover:scale-110" alt="Robot">
+                        <img src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?w=800&q=80" class="w-full h-full object-cover transition transform group-hover:scale-110" alt="AI Safety">
                         <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <i class="fa-solid fa-play-circle text-6xl text-brand-cyan drop-shadow-lg"></i>
                         </div>
-                        <span class="absolute bottom-2 right-2 bg-black/80 text-xs px-2 py-1 rounded">08:30</span>
+                        <span class="absolute bottom-2 right-2 bg-black/80 text-xs px-2 py-1 rounded">10:45</span>
                     </div>
                     <div class="p-5">
-                        <h3 class="text-lg font-bold mb-2 group-hover:text-brand-cyan transition-colors">Robotics in 2025: What to Expect</h3>
+                        <h3 class="text-lg font-bold mb-2 group-hover:text-brand-cyan transition-colors">The State of AI 2025</h3>
                         <div class="flex justify-between text-sm text-gray-400">
-                            <span><i class="fa-regular fa-eye mr-1"></i> 89K Views</span>
-                            <span>2 weeks ago</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i> 890K Views</span>
+                            <span>Two Minute Papers</span>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -321,7 +322,8 @@
         <div class="max-w-4xl mx-auto px-4">
             <div class="text-center mb-12">
                 <span class="text-brand-green font-mono tracking-widest text-sm uppercase">Next Event</span>
-                <h2 class="text-4xl font-bold mt-2 mb-4">Silicon Valley AI Summit</h2>
+                <!-- Updated Event Name -->
+                <h2 class="text-4xl font-bold mt-2 mb-4">World AI Forum Summit</h2>
                 
                 <!-- Countdown -->
                 <div class="flex justify-center gap-4 text-center my-8">
