--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </h1>
 
             <p class="mt-4 max-w-2xl mx-auto text-xl text-gray-400 font-light">
-                Join the world's most elite gathering of innovators, ethical hackers, and visionaries. Exploring the boundaries of Generative AI, Robotics, and Ethics.
+                Join the world's most elite gathering of innovators, visionaries and AI Enthusiasts. Exploring the boundaries of Generative AI, Robotics, and Ethics.
             </p>
 
             <div class="mt-10 flex flex-col items-center gap-4">
@@ -207,7 +207,7 @@
             <!-- Floating Stats -->
             <div class="mt-20 grid grid-cols-2 md:grid-cols-4 gap-8 border-t border-white/10 pt-10">
                 <div class="text-center">
-                    <div class="text-4xl font-bold text-white counter" data-target="125">0</div>
+                    <div class="text-4xl font-bold text-white counter" data-target="10">0</div>
                     <div class="text-sm text-gray-400 uppercase tracking-wider">Countries</div>
                 </div>
                 <div class="text-center">
@@ -239,8 +239,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-end mb-12">
                 <div>
-                    <h2 class="text-3xl md:text-4xl font-bold mb-2">From the <span class="text-red-500">Channel</span></h2>
-                    <p class="text-gray-400">Deep dives, tutorials, and conference replays.</p>
+                    <!-- Removed "From the Channel" Header -->
+                    <p class="text-brand-purple text-2xl font-bold">Deep dives, tutorials, and conference replays</p>
                 </div>
                 <div class="hidden md:flex gap-6 items-center glass-panel px-6 py-3 rounded-full">
                     <div class="text-center">
@@ -296,20 +296,20 @@
                     </div>
                 </a>
 
-                 <!-- Video Card 3 -->
-                 <a href="https://www.youtube.com/watch?v=2iFJ4jtQYkk" target="_blank" class="glass-card rounded-xl overflow-hidden group cursor-pointer block">
+                 <!-- Video Card 3 (Updated Link) -->
+                 <a href="https://www.youtube.com/watch?v=zjkBMFhNj_g" target="_blank" class="glass-card rounded-xl overflow-hidden group cursor-pointer block">
                     <div class="relative h-48 bg-gray-800">
                         <img src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?w=800&q=80" class="w-full h-full object-cover transition transform group-hover:scale-110" alt="AI Safety">
                         <div class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
                             <i class="fa-solid fa-play-circle text-6xl text-brand-cyan drop-shadow-lg"></i>
                         </div>
-                        <span class="absolute bottom-2 right-2 bg-black/80 text-xs px-2 py-1 rounded">10:45</span>
+                        <span class="absolute bottom-2 right-2 bg-black/80 text-xs px-2 py-1 rounded">1:00:00</span>
                     </div>
                     <div class="p-5">
-                        <h3 class="text-lg font-bold mb-2 group-hover:text-brand-cyan transition-colors">The State of AI 2025</h3>
+                        <h3 class="text-lg font-bold mb-2 group-hover:text-brand-cyan transition-colors">Intro to Large Language Models</h3>
                         <div class="flex justify-between text-sm text-gray-400">
-                            <span><i class="fa-regular fa-eye mr-1"></i> 890K Views</span>
-                            <span>Two Minute Papers</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i> 4.5M Views</span>
+                            <span>Andrej Karpathy</span>
                         </div>
                     </div>
                 </a>
