--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </h1>
 
             <p class="mt-4 max-w-2xl mx-auto text-xl text-gray-400 font-light">
-                Join the world's most elite gathering of innovators, visionaries and AI Enthusiasts. Exploring the boundaries of Generative AI, Robotics, and Ethics.
+                Join the world's most elite gathering of innovators, ethical hackers, and visionaries. Exploring the boundaries of Generative AI, Robotics, and Ethics.
             </p>
 
             <div class="mt-10 flex flex-col items-center gap-4">
@@ -207,7 +207,7 @@
             <!-- Floating Stats -->
             <div class="mt-20 grid grid-cols-2 md:grid-cols-4 gap-8 border-t border-white/10 pt-10">
                 <div class="text-center">
-                    <div class="text-4xl font-bold text-white counter" data-target="10">0</div>
+                    <div class="text-4xl font-bold text-white counter" data-target="125">0</div>
                     <div class="text-sm text-gray-400 uppercase tracking-wider">Countries</div>
                 </div>
                 <div class="text-center">
@@ -239,8 +239,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-end mb-12">
                 <div>
-                    <!-- Removed "From the Channel" Header -->
-                    <p class="text-brand-purple text-2xl font-bold">Deep dives, tutorials, and conference replays</p>
+                    <!-- Updated Text Effect -->
+                    <p class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-brand-cyan via-white to-brand-purple animate-shimmer bg-[length:200%_auto]">Deep dives, tutorials, and conference replays.</p>
                 </div>
                 <div class="hidden md:flex gap-6 items-center glass-panel px-6 py-3 rounded-full">
                     <div class="text-center">
@@ -581,7 +581,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-16">
                 <!-- Founder 1 -->
                 <div class="glass-card p-8 rounded-2xl flex flex-col md:flex-row items-center gap-6 border-l-4 border-brand-cyan">
-                    <img src="pranjall.png" class="w-32 h-32 rounded-full object-cover border-2 border-brand-cyan shadow-[0_0_15px_rgba(6,182,212,0.5)]" alt="Dr. Pranjall Jain">
+                    <img src="pranjall.jpeg" class="w-32 h-32 rounded-full object-cover border-2 border-brand-cyan shadow-[0_0_15px_rgba(6,182,212,0.5)]" alt="Dr. Pranjall Jain">
                     <div>
                         <span class="text-brand-cyan text-sm font-bold uppercase tracking-wider">Co-Founder</span>
                         <h3 class="text-2xl font-bold">Dr. Pranjall Jain</h3>
